Migrate _progress.scss to Tailwind (#1754)
A part of #1055.

Was referenced in `admin.scss` but only used in the React parts, so can
be migrated already.

No visual changes.

Before
<img width="369" height="283" alt="image"
src="https://github.com/user-attachments/assets/d2ab5330-7785-4d09-b6d1-42e7b3d6b5ed"
/>

After
<img width="575" height="277" alt="image"
src="https://github.com/user-attachments/assets/ae7648fd-82ff-4bcc-8faa-12102f8c6111"
/>

## Mobile
Before
<img width="173" height="159" alt="image"
src="https://github.com/user-attachments/assets/80ac3212-a204-44b2-b96e-47dae0dce010"
/>

After
<img width="155" height="165" alt="image"
src="https://github.com/user-attachments/assets/0ea2c9b4-3f33-423f-9c87-1da6e81aabf4"
/>

## Dark theme
Before
<img width="227" height="177" alt="image"
src="https://github.com/user-attachments/assets/f39f1053-72f9-4ff2-88d5-e27d6187dc07"
/>

After
<img width="167" height="155" alt="image"
src="https://github.com/user-attachments/assets/be50c7eb-7a10-4acf-9e4f-131176fed045"
/>

## Overlay
Before
<img width="659" height="547" alt="image"
src="https://github.com/user-attachments/assets/4df1c81c-f1f7-4da1-bae8-f4601f56e262"
/>

After
<img width="659" height="547" alt="image"
src="https://github.com/user-attachments/assets/31cedafa-bd4e-400e-b84b-b071c35996f6"
/>

## Progress pie
Before
<img width="51" height="51" alt="image"
src="https://github.com/user-attachments/assets/c3a613c4-9c6a-4558-82d3-dfcf36b9ca2b"
/>
After
<img width="51" height="51" alt="image"
src="https://github.com/user-attachments/assets/3655071e-68c8-4cc9-915a-d7398e5375e1"
/>

Before
<img width="51" height="51" alt="image"
src="https://github.com/user-attachments/assets/1c16a508-5d64-4e3e-acda-6d5357fac173"
/>
After
<img width="51" height="51" alt="image"
src="https://github.com/user-attachments/assets/4217dc7f-b04e-4414-aeac-9dc02c215bf9"
/>

Before
<img width="51" height="51" alt="image"
src="https://github.com/user-attachments/assets/80aeb944-7d25-4727-92e6-de2

--- a/app/javascript/stylesheets/tailwind.css
+++ b/app/javascript/stylesheets/tailwind.css
@@ -45,6 +45,7 @@
   --spacing-product-page: 75.25rem;
   --grid-cols-sidebar: 1fr 3fr;
 
+  --loading-spinner: url("~images/loading-rainbow.svg");
   --animate-fade-in-down-out-up: fade-in-down-out-up 5s both;
 
   @keyframes fade-in-down-out-up {
